# PhySim

./: .gitignore  .gitmodules  CMakeLists.txt
gui/: CMakeLists.txt  ColorGradient.h
nbody/: AppOptions.cpp  AppOptions.h  BarnesHutAlgo.cpp  BarnesHutAlgo.h  CMakeLists.txt  Planet.cpp  Planet.h  Rasterize.cpp  Rasterize.h  Simulator.cpp  Simulator.h  Universe.cpp  Universe.h  main.cpp
