cmake_minimum_required(VERSION 3.1)

project(PhySim)

SET(CMAKE_CXX_FLAGS $ENV{CXX_FLAGS})
SET(CMAKE_CXX_FLAGS_DEBUG $ENV{CXX_FLAGS_DEBUG})
SET(CMAKE_CXX_FLAGS_RELEASE $ENV{CXX_FLAGS_RELEASE})

#message(PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}")
#message(PROJECT_CURRENT_LIST_DIR="${PROJECT_CURRENT_LIST_DIR}")
#message(PROJECT_CURRENT_SOURCE_DIR="${PROJECT_CURRENT_SOURCE_DIR}")
#message(CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

#list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/gui/raylib/cmake")

add_subdirectory(gui)

add_subdirectory(nbody)
